--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,6 +28,10 @@
     }
 }
 
+.section-about {
+    z-index: 5;
+}
+
 .section-platform,
 .section-experience {
     background-color: $color-blue-light;
